Bug 92923 - DFG should distinguish between PutByVal's that clobber the world and ones that don't
Summary: DFG should distinguish between PutByVal's that clobber the world and ones tha...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks: 91933
  Show dependency treegraph
 
Reported: 2012-08-01 17:07 PDT by Filip Pizlo
Modified: 2012-08-01 21:34 PDT (History)
5 users (show)

See Also:


Attachments
the patch (17.46 KB, patch)
2012-08-01 17:11 PDT, Filip Pizlo
mhahnenberg: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2012-08-01 17:07:16 PDT
Patch forthcoming.
Comment 1 Filip Pizlo 2012-08-01 17:11:18 PDT
Created attachment 155929 [details]
the patch
Comment 2 Mark Hahnenberg 2012-08-01 17:36:39 PDT
Comment on attachment 155929 [details]
the patch

r=me
Comment 3 Filip Pizlo 2012-08-01 18:29:51 PDT
Landed in http://trac.webkit.org/changeset/124398